# data-quality-project

./: .gitignore  README.md  pyproject.toml  requeriments.txt
src/: contrato.py  etl.py
