[tool.poetry]
name = "data-quality-project"
version = "0.1.0"
description = ""
authors = ["Gustavo Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.2"
pandera = "^0.20.4"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
